# nodetrace-ir

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_nodetrace_ir.py
docs/: ARCHITECTURE.md  AVZ_DATABASE_UPDATES_RU.md  COLLECTORS.md  EVIDENCE_MODEL.md
iso/: README_RU.txt  START_NODETRACE_IR.cmd  THIRD_PARTY_AVZ_NOTICE.txt
nodetrace_ir/: __init__.py  admin.py  app.py  contracts.py  database.py  demo.py  engine.py  graph_view.py  impact.py  models.py  pipeline.py  presentation.py  preservation.py  report.py
scripts/: build_fat12_efi.py  build_fat16_disk.py  build_iso.ps1  build_iso.py  build_release.ps1  build_winpe_iso.ps1  build_winpe_iso_portable.ps1  extract_fat12_file.py  extract_mszip_ranges.py  extract_winpe_2004_x86.ps1  fetch_winpe_2004_x86.ps1  fetch_winpe_2004_x86_selective.ps1  inspect_cab.py  package_release.ps1  prepare_winpe_2004_x86_portable.ps1  resume_http_ranges.py  resume_range_parts.ps1  run_tests.ps1  smoke_test_winpe_vm.ps1  verify_bootable_iso.py
tests/: test_app_lifecycle.py  test_avz.py  test_avz_update.py  test_collectors.py  test_database.py  test_engine.py  test_event_normalization.py  test_evtx_native.py  test_fat12_efi.py  test_fat16_disk.py  test_iso_builder.py  test_observations.py  test_offline_mode.py  test_offline_sources.py  test_pipeline.py  test_portable_winpe_iso_script.py  test_preservation.py  test_release_packaging.py  test_report.py  test_safety.py  test_verify_bootable_iso.py  test_vm_smoke_script.py  test_winpe_assets.py  test_winpe_fetch.py
(+27 files in other folders)
