[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "nodetrace-ir"
version = "0.3.0"
description = "Bootable offline Windows incident-response graph and evidence timeline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nodetrace-ir = "nodetrace_ir.app:main"

[tool.setuptools]
packages = ["nodetrace_ir", "nodetrace_ir.avz", "nodetrace_ir.collectors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
